--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -34,4 +34,6 @@
     <string name="dialog_contact_name">Ім\'я</string>
     <string name="dialog_contact_surname">Прізвище</string>
     <string name="dialog_contact_profession">Професія</string>
+    <string name="profile">Профіль</string>
+    <string name="message">Повідомлення</string>
 </resources>
