--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,10 @@
     <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
     <string name="already_have">Already have an account?</string>
     <string name="sign_in">Sign in</string>
+    <!--  RecyclerView  -->
+    <string name="contactHasBeenDeleted">%1$s has been deleted</string>
+    <string name="contactHasBeenRestored">%1$s has been restored</string>
+    <string name="undo">Undo</string>
     <!--  contentDescription  -->
     <string name="icon_facebook">Facebook icon</string>
     <string name="icon_linkedin">LinkedIn icon</string>
@@ -34,7 +38,10 @@
     <string name="dialog_contact_name">Name</string>
     <string name="dialog_contact_surname">Surname</string>
     <string name="dialog_contact_profession">Profession</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <!-- DetailView -->
     <string name="profile">Profile</string>
     <string name="message">Message</string>
+    <!-- ViewPager -->
+    <string name="tab1">My Profile</string>
+    <string name="tab2">My contacts</string>
 </resources>
