--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <!--  App name  -->
     <string name="app_name">Task-4. ViewPager2</string>
-    <!--  Main activity  -->
+    <!--  My profile  -->
     <string name="settings">Settings</string>
     <string name="profile_image">Profile image</string>
     <string name="name">Lucile Alvarado</string>
@@ -9,9 +9,18 @@
     <string name="address">5295 Gaylord Walks Apk. 110</string>
     <string name="edit_profile">Edit profile</string>
     <string name="view_my_contacts">VIEW MY CONTACTS</string>
+    <!-- Edit profile -->
+    <string name="editProfileEditProfile">Edit profile</string>
     <!-- Main activity service strings  -->
     <string name="error_message_email">Enter valid email</string>
     <string name="error_message_password">Min 8 symbols. Letters and digits are required</string>
+    <!--  Log In fragment  -->
+    <string name="hello">Hello!</string>
+    <string name="enterEmail">Enter your email and password below</string>
+    <string name="forgotPassword">Forgot your password?</string>
+    <string name="signUp">Sign up</string>
+    <string name="dontHaveAccount">Don\'t have account?</string>
+    <string name="login">Login</string>
     <!--  Sign up activity  -->
     <string name="let_s_get_a">Let\'s get acquainted</string>
     <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
@@ -24,6 +33,12 @@
     <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
     <string name="already_have">Already have an account?</string>
     <string name="sign_in">Sign in</string>
+    <!--  Sign Up Extended-->
+    <string name="yourProfileData">Your profile data</string>
+    <string name="userName">User name</string>
+    <string name="mobilePhone">Mobile phone</string>
+    <string name="cancel">Cancel</string>
+    <string name="forward">Forward</string>
     <!--  RecyclerView  -->
     <string name="contactHasBeenDeleted">%1$s has been deleted</string>
     <string name="contactHasBeenRestored">%1$s has been restored</string>
@@ -45,4 +60,6 @@
     <string name="tab1">My Profile</string>
     <string name="tab2">My contacts</string>
     <string name="onDeniedPermission">Permission should be granted!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
