--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,7 @@
 <resources>
     <!--  App name  -->
-    <string name="app_name">Task-4. ViewPager2</string>
-    <!--  My profile  -->
-    <string name="settings">Settings</string>
-    <string name="profile_image">Profile image</string>
-    <string name="name">Lucile Alvarado</string>
-    <string name="profession">Graphic designer</string>
-    <string name="address">5295 Gaylord Walks Apk. 110</string>
-    <string name="edit_profile">Edit profile</string>
-    <string name="view_my_contacts">VIEW MY CONTACTS</string>
-    <!-- Edit profile -->
-    <string name="editProfileEditProfile">Edit profile</string>
-    <!-- Main activity service strings  -->
-    <string name="error_message_email">Enter valid email</string>
-    <string name="error_message_password">Min 8 symbols. Letters and digits are required</string>
+    <string name="app_name">Task-5. WebInteraction</string>
+    <!--  Authorization activity  -->
     <!--  Log In fragment  -->
     <string name="hello">Hello!</string>
     <string name="enterEmail">Enter your email and password below</string>
@@ -21,7 +9,8 @@
     <string name="signUp">Sign up</string>
     <string name="dontHaveAccount">Don\'t have account?</string>
     <string name="login">Login</string>
-    <!--  Sign up activity  -->
+    <string name="emailAuthErrorMessage">Account with these credentials doesn\'t exist</string>
+    <!--  Sign up fragment-->
     <string name="let_s_get_a">Let\'s get acquainted</string>
     <string name="fill_out_the_profile">Fill out the profile and go to the application!</string>
     <string name="email">E-mail</string>
@@ -39,15 +28,40 @@
     <string name="mobilePhone">Mobile phone</string>
     <string name="cancel">Cancel</string>
     <string name="forward">Forward</string>
+
+    <!--  Main activity-->
+    <!--  My profile fragment  -->
+    <string name="settings">Settings</string>
+    <string name="profile_image">Profile image</string>
+    <string name="name">Lucile Alvarado</string>
+    <string name="profession">Graphic designer</string>
+    <string name="address">5295 Gaylord Walks Apk. 110</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="view_my_contacts">VIEW MY CONTACTS</string>
+    <!-- Edit profile -->
+    <string name="editProfileEditProfile">Edit profile</string>
+    <string name="editProfileUsername">Username</string>
+    <string name="editProfileCareer">Career</string>
+    <string name="editProfileEmail">Email</string>
+    <string name="editProfilePhone">Phone</string>
+    <string name="editProfileAddress">Address</string>
+    <string name="editProfileDOB">Date of birth</string>
+    <string name="editProfileSave">Save</string>
+    <!-- Main activity service strings  -->
+    <string name="error_message_email">Enter valid email</string>
+    <string name="error_message_password">Min 8 symbols. Letters and digits are required</string>
     <!--  RecyclerView  -->
     <string name="contactHasBeenDeleted">%1$s has been deleted</string>
     <string name="contactHasBeenRestored">%1$s has been restored</string>
     <string name="undo">Undo</string>
+    <string name="fragmentMyContactsRecyclerTopText">No results found</string>
+    <string name="fragmentMyContactsRecyclerBottomText">You can see more contacts in the recommendation</string>
     <!--  contentDescription  -->
     <string name="icon_facebook">Facebook icon</string>
     <string name="icon_linkedin">LinkedIn icon</string>
     <string name="icon_instagram">Instagram icon</string>
     <string name="contacts">Contacts</string>
+    <string name="users">Users</string>
     <string name="add_contacts">Add contacts</string>
     <string name="add_contact">Add contact</string>
     <string name="dialog_contact_name">Name</string>
@@ -60,6 +74,4 @@
     <string name="tab1">My Profile</string>
     <string name="tab2">My contacts</string>
     <string name="onDeniedPermission">Permission should be granted!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
