--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">My Application</string>
+
+    <!--    MyProfile    -->
+    <string name="edit_profile">Edit profile</string>
+    <string name="log_out">Log out</string>
+    <string name="settings">Settings</string>
+    <string name="view_my_contacts">View my contacts</string>
+
 </resources>
