--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,17 @@
     <string name="settings">Settings</string>
     <string name="view_my_contacts">View my contacts</string>
 
+    <!--    Sign Up    -->
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
+    <string name="e_mail">E-mail</string>
+    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
+    <string name="google" translatable="false">Google</string>
+    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
+    <string name="or">or</string>
+    <string name="password">Password</string>
+    <string name="register">Register</string>
+    <string name="remember_me">Remember me</string>
+    <string name="sign_in">Sign In</string>
+
 </resources>
