Added contacts recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
     <string name="text_input_email_description">Incorrect E-Mail address</string>
     <string name="text_input_password_error_description">Your password must include a minimum of 6 characters</string>
 
+    <!--    MyContacts    -->
+    <string name="add_contacts">Add contacts</string>
+    <string name="contacts">Contacts</string>
+
 </resources>
