--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
 
     <!--    MyContacts    -->
     <string name="add_contacts">Add contacts</string>
+    <string name="contact_has_been_deleted">%1$s has been deleted</string>
     <string name="contacts">Contacts</string>
+    <string name="undo">Undo</string>
 
 </resources>
