--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!--    MyProfile    -->
     <string name="edit_profile">Edit profile</string>
+    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
     <string name="log_out">Log out</string>
     <string name="settings">Settings</string>
     <string name="view_my_contacts">View my contacts</string>
@@ -27,5 +28,45 @@
     <string name="contact_has_been_deleted">%1$s has been deleted</string>
     <string name="contacts">Contacts</string>
     <string name="undo">Undo</string>
+
+    <!--    Details    -->
+    <string name="add_to_my_contacts">Add to my contacts</string>
+    <string name="message">Message</string>
+    <string name="profile">Profile</string>
+
+    <!--    EditProfile    -->
+    <string name="add_contact">Add contact</string>
+    <string name="address">Address</string>
+    <string name="career">Career</string>
+    <string name="date_of_birth">Date of birth</string>
+    <string name="phone">Phone</string>
+    <string name="save">Save</string>
+    <string name="username">Username</string>
+
+    <!--    Login    -->
+    <string name="don_t_have_account">Don’t have account?</string>
+    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
+    <string name="forgot_your_password">Forgot your password?</string>
+    <string name="hello">Hello!</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+
+    <!--    SignUpExtended    -->
+    <string name="forward">Forward</string>
+    <string name="mobile_phone">Mobile phone</string>
+    <string name="your_profile_data">Your profile data</string>
+
+    <!--    ItemContactAdd    -->
+    <string name="add">Add</string>
+
+    <!--    Notification    -->
+    <string name="channel_for_miscellaneous_notifications">Channel for miscellaneous notifications</string>
+    <string name="contact_was_added">Contact was added</string>
+    <string name="contact_was_removed">Contact was removed</string>
+    <string name="miscellaneous">Miscellaneous</string>
+
+    <!--    DialogFragment    -->
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
 
 </resources>
